--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -9,7 +9,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/containers_books">
+        android:id="@+id/containers_books"
+        android:paddingBottom="@dimen/activity_horizontal_margin">
 
     </androidx.recyclerview.widget.RecyclerView>
 
