--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="@drawable/background">
 
     <EditText
         android:id="@+id/registrationName"
