--- a/app/src/main/res/layout/fragment_audiobook.xml
+++ b/app/src/main/res/layout/fragment_audiobook.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.audiobooks.AudiobooksFragment">
+    tools:context=".ui.audiobooks.AudiobooksFragment"
+    android:background="@drawable/background">
     <TextView
         android:id="@+id/text_audiobook"
         android:layout_width="match_parent"
