--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/navigation_shop"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/store_button"
         android:title="@string/shop" />
 
     <item
         android:id="@+id/navigation_personal_page"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/user"
         android:title="@string/personal_page" />
 
     <item
         android:id="@+id/navigation_recommendations"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/store_bucket"
         android:title="@string/recommendations" />
 
     <item
         android:id="@+id/navigation_audiobooks"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/audiobooks"
         android:title="@string/audiobooks" />
 
 </menu>
