--- a/app/src/main/res/layout/book_page_fragment.xml
+++ b/app/src/main/res/layout/book_page_fragment.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/book_page_fragment"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
-    android:id="@+id/book_page_fragment">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="10">
+            android:layout_weight="10"
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -72,6 +72,7 @@
                         android:id="@+id/bookPageImage"
                         android:layout_width="176dp"
                         android:layout_height="wrap_content"
+                        android:padding="8dp"
                         android:src="@drawable/book1" />
                 </LinearLayout>
 
@@ -152,7 +153,7 @@
                         android:id="@+id/bookPageButtonBuyMore"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:text="Доп. материалы за 99 RUR" />
 
                     <TextView
                         android:id="@+id/bookPageDescription"
@@ -167,15 +168,15 @@
                         android:text="Комментарии к этому изданию:" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/bookPageComments"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/bookPageComments"/>
+                        android:layout_height="match_parent" />
 
                     <Button
                         android:id="@+id/bookPageButtonAddComment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:text="Добавить комментарий" />
                 </LinearLayout>
             </ScrollView>
 
