--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#292B77</color>
+    <color name="colorPrimaryLight">#9c7dff</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBack2">#000000</color>
     <color name="colorBack4">#FF1100</color>
