--- a/app/src/main/res/layout/book_page_fragment.xml
+++ b/app/src/main/res/layout/book_page_fragment.xml
@@ -30,7 +30,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
-                    android:src="@drawable/user"
+                    android:src="@drawable/avatar"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
