--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -27,22 +27,33 @@
                     android:id="@+id/editText"
                     android:layout_width="224dp"
                     android:layout_height="46dp"
+                    android:layout_marginStart="32dp"
+                    android:background="@drawable/circled_corners_white"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Name"
+                    android:text="Поиск"
+                    android:textColor="@color/colorPrimaryLight"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.3"
-                    tools:layout_editor_absoluteX="76dp" />
+                    app:layout_constraintVertical_bias="0.3" />
 
                 <Spinner
                     android:id="@+id/spinner"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="34dp"
+                    android:layout_height="34dp"
+                    android:layout_marginEnd="24dp"
                     android:background="@drawable/sort_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/editText"
-                    tools:layout_editor_absoluteY="16dp" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.3" />
 
                 <TextView
                     android:id="@+id/textView7"
@@ -50,9 +61,11 @@
                     android:layout_height="wrap_content"
                     android:text="Список книг:"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="30dp"
-                    tools:layout_editor_absoluteX="16dp"
-                    tools:layout_editor_absoluteY="89dp" />
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/editText"
+                    tools:layout_editor_absoluteX="16dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
